--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
 </head>
 <body>
-    Hi
+    Hello World
 </body>
 </html>
+<!--current progress: at beginning of
+https://www.youtube.com/watch?v=RjHflb-QgVc&list=PLoYCgNOIyGAB_8_iq1cL8MVeun7cB6eNc&index=2
+-->
