--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-</head>
-<body>
-    Hello World
-</body>
+    <head>
+        <title>My Page!</title>
+    </head>
+    <body>
+        <button>I'm a button</button>
+        <p>Hi im a <em>strong</em> paragraph of <br/> text</p>
+        <p>Hi im a paragraph of text</p>
+        <p>Hi im a paragraph of text</p>
+        <p>Hi im a paragraph of text</p>
+    </body>
 </html>
 <!--current progress: at beginning of
 https://www.youtube.com/watch?v=RjHflb-QgVc&list=PLoYCgNOIyGAB_8_iq1cL8MVeun7cB6eNc&index=2
