--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <nav class="navbar" role="navigation" aria-label="Main Navigation">
-            <div class="nav__container">
+            <div class="navbar__container">
                 <a href="/" id="navbar-logo">Jocelyn</a> <!--putting just a / leads back to home page-->
                 <ul class="navbar__menu">
                     <li class="navbar__item">
