--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jocelyn - personal website</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Font Awesome Link -->
+    <script src="https://kit.fontawesome.com/c1578ed181.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -31,9 +33,9 @@
                 </div>
 
                 <button class="navbar__toggle" id="mobile-menu" aria-label="Toggle Navigation" aria-expanded=""false>
-                    <i class="fas fa-bars"></i>
+                    <!-- icon copy and pasted code from font awesome -->
+                    <i class="fa-solid fa-bars"></i>
                 </button>
-
             </div>
         </nav>
     </header>
