--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a href="/projects.html" class="navbar__links">Projects</a>
                     </li>
                     <li class="navbar__btn mobile">
-                        <a href="/surprise.html" class="navbar__links">Surprise</a>
+                        <a href="/surprise.html" class="button">Surprise</a>
                     </li>
                 </ul>
 
