--- a/index.html
+++ b/index.html
@@ -39,6 +39,23 @@
             </div>
         </nav>
     </header>
+
+    <!-- Hero section -->
+     <main>
+        <section class="hero">
+            <div class="hero__container">
+                <div class="hero__content">
+                    <h1>About me</h1>
+                    <p>My name is Jocelyn and this is my website. Go look around.</p>
+                    <button class="hero__btn">Surprise</button>
+                </div>
+                <div class="hero__image">
+                    <img src="" alt="silly me add an image later">
+                </div>
+            </div>
+        </section>
+     </main>
+
     <script src="script.js"></script>
 </body>
 </html>
