--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button class="hero__btn">Surprise</button>
                 </div>
                 <div class="hero__image">
-                    <img src="" alt="silly me add an image later">
+                    <img src="/images/undraw_wallet_8u45.svg" alt="silly me add an image later">
                 </div>
             </div>
         </section>
