--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <button class="hero__btn">Surprise</button>
                 </div>
                 <div class="hero__image">
-                    <img src="/images/undraw_credit-card_t6qm.svg" alt="silly me add an image later">
+                    <img id="hero-img" src="/images/undraw_credit-card_t6qm.svg" alt="silly me add an image later">
                 </div>
             </div>
         </section>
