--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
                 </div>
             </div>
         </section>
+
+        <div class="rotating-logos">
+            <div class="rotating-logos__track">
+                <span class="logo-text">pneumonoultramicroscopicsilicovolcanoconiosis</span>
+                <span class="logo-text">yes i can spell that. </span>
+                <span class="logo-text">hippopotomonstrosesquippedaliophobia</span>
+                <span class="logo-text">is something that I don't have. </span>
+                <span class="logo-text">here's another long word: </span>
+                <span class="logo-text">supercalifragilisticexpialidocious</span>
+            </div>
+        </div>
+
      </main>
 
     <script src="script.js"></script>
