--- a/index.html
+++ b/index.html
@@ -66,6 +66,37 @@
             </div>
         </div>
 
+        <section class="why-choose-us">
+            <div class="container">
+                <h2>Interests</h2>
+                <p class="intro-text">
+                    Music, and stuff ahhahahha. Robotics blah blah blah. Type a paragraph worth of words. Filler words filler words filler words filler words filler words filler words.
+                </p>
+                <div class="features-grid">
+                    <div class="feature-item">
+                        <i class="fa-solid fa-code icon"></i>
+                        <h3>Codinggg</h3>
+                        <p>filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words </p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fa-solid fa-robot icon"></i>
+                        <h3>Robotics AHH</h3>
+                        <p>filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words </p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fa-solid fa-plug-circle-bolt icon"></i>
+                        <h3>Wiring and electronics design</h3>
+                        <p>filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words </p>
+                    </div>
+                    <div class="feature-item">
+                        <i class="fa-solid fa-music icon"></i>
+                        <h3>Musicccc</h3>
+                        <p>filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words filler words </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
      </main>
 
     <script src="script.js"></script>
