commit before my computer dies, infinished html section, continue under card-features

--- a/index.html
+++ b/index.html
@@ -97,6 +97,51 @@
             </div>
         </section>
 
+        <!-- tbd section -->
+        <section class="services">
+            <h2>Some sort of heading</h2>
+            <!-- a toggle button of sorts-->
+            <div class="pricing toggle">
+                <div class="toggle container">
+                    <spam class="toggle-option">Option 1</spam>
+                    <!-- double check if this was called form? -->
+                    <label form="" class="switch">
+                        <input type="checkbox" id="pricing-toggle-checkbox" onClick="switchPricing()"/>
+                        <spam class="slider"></spam>
+                    </label>
+                    <spam class="toggle-option">Option 2</spam>
+                </div>
+                <div class="save-percentage-container">
+                    <spam class="save-percentage">Some text?</spam>
+                </div>
+            </div>
+
+            <div class="services__container">
+                <div class="services__card">
+                    <!-- check if this says content or context -->
+                    <div class="card-content">
+                        <h3>A Heading 3</h3>
+                        <div class="card-price">
+                            <!-- double check below class name -->
+                            <p class="price monthly-price">small words</p>
+                            <p class="price yearly-price">small words</p>
+                            <!-- this .html is to be changed depends i can't think right now -->
+                            <a href="/interests.html" class="price-btn">button name</a>
+                            <!-- check if its spelled desc -->
+                            <p id="small-desc">A little small description of whatever this section is gonna be about</p>
+                        </div>
+
+                        <div class="card-features">
+                            <p>features</p>
+                            <!-- continue here -->
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </section> 
+
      </main>
 
     <script src="script.js"></script>
