potentially the interests section

--- a/index.html
+++ b/index.html
@@ -118,26 +118,71 @@
 
             <div class="services__container">
                 <div class="services__card">
-                    <!-- check if this says content or context -->
                     <div class="card-content">
-                        <h3>A Heading 3</h3>
+                        <h3>Interests html 1</h3>
                         <div class="card-price">
-                            <!-- double check below class name -->
                             <p class="price monthly-price">small words</p>
-                            <p class="price yearly-price">small words</p>
+                            <p class="price yearly-price hidden">small words</p>
                             <!-- this .html is to be changed depends i can't think right now -->
                             <a href="/interests.html" class="price-btn">button name</a>
-                            <!-- check if its spelled desc -->
                             <p id="small-desc">A little small description of whatever this section is gonna be about</p>
                         </div>
-
                         <div class="card-features">
                             <p>features</p>
-                            <!-- continue here -->
+                            <ul>
+                                <li>item 1</li>
+                                <li>item 2</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="services__card">
+                    <div class="card-content">
+                        <h3>Interests html 2</h3>
+                        <div class="card-price">
+                            <p class="price monthly-price">small words</p>
+                            <p class="price yearly-price hidden">small words</p>
+                            <!-- this .html is to be changed depends i can't think right now -->
+                            <a href="/interests.html" class="price-btn">button name</a>
+                            <p id="small-desc">A little small description of whatever this section is gonna be about</p>
+                        </div>
+                        <div class="card-features">
+                            <p>features</p>
+                            <ul>
+                                <li>item 1</li>
+                                <li>item 2</li>
+                                <li>item 3</li>
+                                <li>item 4</li>
+                                <li>item 5</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="services__card">
+                    <div class="card-content">
+                        <h3>Interests html 3</h3>
+                        <div class="card-price">
+                            <p class="price monthly-price">small words</p>
+                            <p class="price yearly-price hidden">small words</p>
+                            <!-- this .html is to be changed depends i can't think right now -->
+                            <a href="/interests.html" class="price-btn">button name</a>
+                            <p id="small-desc">A little small description of whatever this section is gonna be about</p>
+                        </div>
+                        <div class="card-features">
+                            <p>features</p>
+                            <ul>
+                                <li>item 1</li>
+                                <li>item 2</li>
+                                <li>item 3</li>
+                                <li>item 4</li>
+                                <li>item 5</li>
+                                <li>item 6</li>
+                            </ul>
                         </div>
 
                     </div>
                 </div>
+
             </div>
 
         </section> 
